@@ -448,6 +448,7 @@
 
 #define	CHARSET_UNICODE		"UTF-8"
 #define	CHARSET_8BIT		"KOI8-U"
+#define	DEFAULT_CHARSET		CHARSET_UNICODE
 
 #define	IRCD_CHANGE_LOCALE	1
 
