@@ -1,5 +1,12 @@
 Version 2.0
 --------------
+2011-08-29 erra <erra@ya.ru>
+	* ircd/s_conf.c: DEFAULT_CHARSET assigned for ports with undefined one
+	* ircd/s_serv.c: NULL pointer check added in report_listeners
+		to avoid SIGSEGV in /stats P with dead port definitions
+	* ircd/s_user.c: DupString usage refined
+	* support/config.h.dist: DEFAULT_CHARSET added
+
 2011-08-14 erra <erra@ya.ru>
 	* rusnet/rusnet.h: rusnet_zmodecheck reintroduced (needed in
 		ircd/s_user.c)
